@@ -32,6 +32,7 @@ from DateTimeModelElement import DateTimeModelElement
 from DebugModelElement import DebugModelElement
 from DecimalIntegerValueModelElement import DecimalIntegerValueModelElement
 from DelimitedDataModelElement import DelimitedDataModelElement
+from ElementValueBranchModelElement import ElementValueBranchModelElement
 from FirstMatchModelElement import FirstMatchModelElement
 from FixedDataModelElement import FixedDataModelElement
 from FixedWordlistDataModelElement import FixedWordlistDataModelElement
