@@ -4,6 +4,8 @@ V0.0.7 (2016-12-07):
 * New features:
   * Datetime parsing reimplemented in DateTimeModelElement to
     fix various shortcomings of strptime in Python and libc.
+  * ElementValueBranchModelElement added to support conditional
+    branching.
 
 
 V0.0.6 (2016-11-04):
