@@ -3,6 +3,8 @@ logdata-anomaly-miner (0.0.7~pre0) xenial; urgency=low
   New features:
   * Datetime parsing reimplemented in DateTimeModelElement to
     fix various shortcomings of strptime in Python and libc.
+  * ElementValueBranchModelElement added to support conditional
+    branching.
 
  -- Roman Fiedler <roman.fiedler@ait.ac.at>  Wed,  7 Nov 2016 08:00:00 +0000
 
